Fix area under hidden toast not being interactive on small screens

--- a/css/photostack.css
+++ b/css/photostack.css
@@ -41,6 +41,7 @@ nav .navbar-brand {
     right: 20px;
     color: #000;
     z-index: 100;
+    display: none;
 }
 
 .toast .close {
@@ -71,7 +72,7 @@ nav .navbar-brand {
     right: 0;
     bottom: 0;
     background-color: #303030;
-    z-index: 100;
+    z-index: 200;
     padding: 10px 0 10px 0;
 }
 
